--- a/portfolio.html
+++ b/portfolio.html
@@ -24,17 +24,13 @@
     <header class="page-header">
       <div class="container page-header-container">
         <nav class="page-navigation">
-          <a class="logo" href="/index.html"
-            >Web<span class="logo-header">Studio</span></a
-          >
+          <a class="logo" href="/index.html">Web<span class="logo-header">Studio</span></a>
           <ul class="site-nav list">
             <li class="site-item">
               <a href="./index.html" class="site-nav-link">Студія</a>
             </li>
             <li class="site-item">
-              <a href="./portfolio.html" class="site-nav-link current"
-                >Портфоліо</a
-              >
+              <a href="./portfolio.html" class="site-nav-link current">Портфоліо</a>
             </li>
             <li class="site-item">
               <a href="" class="site-nav-link">Контакти</a>
@@ -45,13 +41,7 @@
         <ul class="contact-tools list">
           <li class="contact-menu">
             <a class="contact-link" href="mailto:info@devstudio.com">
-              <svg
-                class="contact-icon"
-                width="16"
-                height="12"
-                aria-label="envelope"
-                lang="en"
-              >
+              <svg class="contact-icon" width="16" height="12" aria-label="envelope" lang="en">
                 <use href="./images/icons.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com</a
@@ -59,13 +49,7 @@
           </li>
           <li class="contact-menu">
             <a class="contact-link" href="tel:+380961111111">
-              <svg
-                class="contact-icon"
-                width="10"
-                height="16"
-                aria-label="smartphone"
-                lang="en"
-              >
+              <svg class="contact-icon" width="10" height="16" aria-label="smartphone" lang="en">
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11</a
@@ -93,9 +77,9 @@
                 <div class="product-thumb">
                   <img src="./images/laptop.jpg" alt="laptop" width="370" />
                   <p class="product-overlay">
-                    Ресурс пропонує комплексні пропозиції з різним рівнем
-                    функціоналу та сервісів. Все це дозволить відвідувачу
-                    отримати вичерпні відомості про компанію чи приватну особу.
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
                   </p>
                 </div>
                 <div class="work-item-wrapper">
@@ -107,15 +91,11 @@
             <li class="work-card">
               <a class="title-link" href="">
                 <div class="product-thumb">
-                  <img
-                    src="./images/basketball.jpg"
-                    alt="basketball"
-                    width="370"
-                  />
+                  <img src="./images/basketball.jpg" alt="basketball" width="370" />
                   <p class="product-overlay">
-                    Ресурс пропонує комплексні пропозиції з різним рівнем
-                    функціоналу та сервісів. Все це дозволить відвідувачу
-                    отримати вичерпні відомості про компанію чи приватну особу.
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
                   </p>
                 </div>
                 <div class="work-item-wrapper">
@@ -129,9 +109,9 @@
                 <div class="product-thumb">
                   <img src="./images/seafood.jpg" alt="seafood" width="370" />
                   <p class="product-overlay">
-                    Ресурс пропонує комплексні пропозиції з різним рівнем
-                    функціоналу та сервісів. Все це дозволить відвідувачу
-                    отримати вичерпні відомості про компанію чи приватну особу.
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
                   </p>
                 </div>
                 <div class="work-item-wrapper">
@@ -143,15 +123,11 @@
             <li class="work-card">
               <a class="title-link" href="">
                 <div class="product-thumb">
-                  <img
-                    src="./images/headphones.jpg"
-                    alt="headphones"
-                    width="370"
-                  />
+                  <img src="./images/headphones.jpg" alt="headphones" width="370" />
                   <p class="product-overlay">
-                    Ресурс пропонує комплексні пропозиції з різним рівнем
-                    функціоналу та сервісів. Все це дозволить відвідувачу
-                    отримати вичерпні відомості про компанію чи приватну особу.
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
                   </p>
                 </div>
                 <div class="work-item-wrapper">
@@ -165,9 +141,9 @@
                 <div class="product-thumb">
                   <img src="./images/boxes.jpg" alt="boxes" width="370" />
                   <p class="product-overlay">
-                    Ресурс пропонує комплексні пропозиції з різним рівнем
-                    функціоналу та сервісів. Все це дозволить відвідувачу
-                    отримати вичерпні відомості про компанію чи приватну особу.
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
                   </p>
                 </div>
                 <div class="work-item-wrapper">
@@ -181,9 +157,9 @@
                 <div class="product-thumb">
                   <img src="./images/website.jpg" alt="website" width="370" />
                   <p class="product-overlay">
-                    Ресурс пропонує комплексні пропозиції з різним рівнем
-                    функціоналу та сервісів. Все це дозволить відвідувачу
-                    отримати вичерпні відомості про компанію чи приватну особу.
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
                   </p>
                 </div>
                 <div class="work-item-wrapper">
@@ -197,9 +173,9 @@
                 <div class="product-thumb">
                   <img src="./images/edition.jpg" alt="edition" width="370" />
                   <p class="product-overlay">
-                    Ресурс пропонує комплексні пропозиції з різним рівнем
-                    функціоналу та сервісів. Все це дозволить відвідувачу
-                    отримати вичерпні відомості про компанію чи приватну особу.
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
                   </p>
                 </div>
                 <div class="work-item-wrapper">
@@ -213,9 +189,9 @@
                 <div class="product-thumb">
                   <img src="./images/lab.jpg" alt="lab" width="370" />
                   <p class="product-overlay">
-                    Ресурс пропонує комплексні пропозиції з різним рівнем
-                    функціоналу та сервісів. Все це дозволить відвідувачу
-                    отримати вичерпні відомості про компанію чи приватну особу.
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
                   </p>
                 </div>
                 <div class="work-item-wrapper">
@@ -229,9 +205,9 @@
                 <div class="product-thumb">
                   <img src="./images/business.jpg" alt="business" width="370" />
                   <p class="product-overlay">
-                    Ресурс пропонує комплексні пропозиції з різним рівнем
-                    функціоналу та сервісів. Все це дозволить відвідувачу
-                    отримати вичерпні відомості про компанію чи приватну особу.
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
                   </p>
                 </div>
                 <div class="work-item-wrapper">
@@ -244,90 +220,71 @@
         </div>
       </section>
     </main>
-    <footer class="footer page-footer">
-      <div class="container footer-wrapper">
-        <div class="footer-address">
-          <a class="logo logo-footer" href="/index.html"
-            >Web<span class="logo-title">Studio</span></a
-          >
-          <address>
-            <ul class="list">
-              <li class="address-item">
-                <a class="address" href="https://goo.gl/maps/VaWgG16zi4GjJEjv5"
-                  >м. Київ, пр-т Лесі Українки, 26</a
-                >
-              </li>
-              <li class="address-item">
-                <a class="address-contact" href="mailto:info@devstudio.com"
-                  >info@devstudio.com</a
-                >
-              </li>
-              <li>
-                <a class="address-contact" href="tel:+380961111111"
-                  >+38 096 111 11 11</a
-                >
-              </li>
-            </ul>
-          </address>
-        </div>
-        <div class="footer-social-list">
-          <p class="footer-action">Приєднуйтесь</p>
-          <ul class="social-list list">
-            <li class="footer-social-list-item">
-              <a href="" class="footer-social-list-link">
-                <svg
-                  class="footer-social-list-icon"
-                  width="20"
-                  height="20"
-                  aria-label="instagram"
-                  lang="en"
-                >
-                  <use href="./images/icons.svg#icon-instagram"></use>
-                </svg>
-              </a>
+
+  <footer class="footer page-footer">
+    <div class="container footer-wrapper">
+      <div class="footer-address">
+        <a class="logo logo-footer" href="/index.html">Web<span class="logo-title">Studio</span></a>
+        <address>
+          <ul class="list">
+            <li class="address-item">
+              <a class="address" href="https://goo.gl/maps/VaWgG16zi4GjJEjv5">м. Київ, пр-т Лесі Українки, 26</a>
             </li>
-            <li class="footer-social-list-item">
-              <a href="" class="footer-social-list-link">
-                <svg
-                  class="footer-social-list-icon"
-                  width="20"
-                  height="20"
-                  aria-label="twitter"
-                  lang="en"
-                >
-                  <use href="./images/icons.svg#icon-twitter"></use>
-                </svg>
-              </a>
+            <li class="address-item">
+              <a class="address-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
-            <li class="footer-social-list-item">
-              <a href="" class="footer-social-list-link">
-                <svg
-                  class="footer-social-list-icon"
-                  width="20"
-                  height="20"
-                  aria-label="facebook"
-                  lang="en"
-                >
-                  <use href="./images/icons.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-social-list-item">
-              <a href="" class="footer-social-list-link">
-                <svg
-                  class="footer-social-list-icon"
-                  width="20"
-                  height="20"
-                  aria-label="linkedin"
-                  lang="en"
-                >
-                  <use href="./images/icons.svg#icon-linkedin"></use>
-                </svg>
-              </a>
+            <li>
+              <a class="address-contact" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
           </ul>
-        </div>
+        </address>
       </div>
-    </footer>
-  </body>
+      <div class="footer-social-list">
+        <p class="footer-action">Приєднуйтесь</p>
+        <ul class="social-list list">
+          <li class="footer-social-list-item">
+            <a href="" class="footer-social-list-link">
+              <svg class="footer-social-list-icon" width="20" height="20" aria-label="instagram" lang="en">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-social-list-item">
+            <a href="" class="footer-social-list-link">
+              <svg class="footer-social-list-icon" width="20" height="20" aria-label="twitter" lang="en">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-social-list-item">
+            <a href="" class="footer-social-list-link">
+              <svg class="footer-social-list-icon" width="20" height="20" aria-label="facebook" lang="en">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-social-list-item">
+            <a href="" class="footer-social-list-link">
+              <svg class="footer-social-list-icon" width="20" height="20" aria-label="linkedin" lang="en">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+      </div>
+      <div class="footer-subscription">
+      <p class="footer-action">Підпишіться на розсилку</p>
+      <form class="mail-subscription">
+        <input type="email" class="user-email" name="user-email" placeholder="E-mail"/>
+        <button type="submit" class="button-subscription">Підписатися
+          <svg class="button-subscription-icon" width="24"
+            height="24">
+            <use
+            href="./images/icons.svg#icon-send"></use>
+          </svg>
+        </button>
+      </form>
+      </div>
+  </footer>
+</body>
+
 </html>
