--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
           </span>
         </label>
 
-        <label>
+        <label class="modal-form-text-field">
           <span class="modal-form-input-desc">Коментар</span>
           <textarea class="modal-form-message" name="user_message" placeholder="Введіть текст"></textarea>
         </label>
